--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,3 @@
-//
+@import '../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome';
+@import '../../node_modules/@fortawesome/fontawesome-free/scss/solid';
+@import '../../node_modules/@coreui/coreui/scss/coreui.scss';
