login view created

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25682,3 +25682,12 @@ body {
   background: #eb7d46 !important;
 }
 
+.lgn {
+  border-color: #eb7d46 !important;
+  background-color: #eb7d46 !important;
+}
+
+.lgn-back {
+  background-color: #eb7d46 !important;
+}
+
