--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,12 @@
   color: #fff;
   background: #eb7d46 !important;
 }
+
+.lgn {
+  border-color: #eb7d46 !important;
+  background-color: #eb7d46 !important;
+}
+
+.lgn-back {
+  background-color: #eb7d46 !important;
+}
