product edit done, tweak colors

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,3 +15,32 @@
 .lgn-back {
   background-color: #eb7d46 !important;
 }
+
+.prod-pref {
+  height: 40px;
+}
+
+.btn-outline-primary {
+  color: #eb7d46 !important;
+  border-color: #eb7d46 !important;
+}
+
+.btn-outline-primary:hover {
+  color: #fff !important;
+  border-color: #eb7d46 !important;
+  background-color: #eb7d46 !important;
+}
+
+.page-item.active .page-link {
+  color: #fff !important;
+  border-color: #eb7d46 !important;
+  background-color: #eb7d46 !important;
+}
+
+.page-link {
+  color: #eb7d46 !important;
+}
+
+.card-header-actions a {
+  color: #eb7d46 !important;
+}
